src/Common Files/frames.h

//Series.cpp
    void FRAMES_API AddSeries(int Num1, double *Times1, double *Values1,
                                int Num2, double *Times2, double *Values2,
                                int *NumRes, double *TimesRes, double *ValuesRes);
     int FRAMES_API GetProbability(int zeroes, int resolution, int count,
                                     double *intimes, double *invalues,
                                     double *minY, double *maxY,
                                     int *xBegIdx, int *xEndIdx,
                                     double *sprob, double *svalue);
    void FRAMES_API HasSections(int val);
    void FRAMES_API StatSort(int n, int *idx, double *val, double *mean, double *min, double *max, double *median, double *sd);
//Sum3.cpp
     int FRAMES_API Initialize(char *argv0, char *argv1, char *argv2, char *argv3, char *argv4, char *argv5);
     int FRAMES_API Iterate(int iteration);
     int FRAMES_API Finalize();
// 1 based, all indices start at 1 for SCF/WFF/WCF/AFF/BBF
// 0 based, all indices start at 0 for ATO/EPF/RIF/HIF

    //SCFClass.cpp
    void FRAMES_API scfOpen(char *fuiname, char *modId);
    void FRAMES_API scfClose();
     int FRAMES_API scfGetNumRunInfo();
     int FRAMES_API scfGetRunInfo(int Idx, char *info);
     int FRAMES_API scfGetNumSets();
     int FRAMES_API scfGetSetInfo(int dsIdx, char *name, char *type);
//     int FRAMES_API scfGetLocation(int dsIdx, double *x, double *y, double *z);
     int FRAMES_API scfGetDimensions(int dsIdx, double *width, double *length, double *depth);
     int FRAMES_API scfGetNumContam(int dsIdx);
     int FRAMES_API scfGetNumProgeny(int dsIdx, int conIdx);
     int FRAMES_API scfGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API scfGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
     int FRAMES_API scfGetSeriesValues(int dsIdx, int conIdx, int progIdx, int count, double *times, double *values);
    void FRAMES_API scfAggregate(char *filename, char* casList);
    void FRAMES_API scfInsert(char *filename, char *casList, char *nameList, char *degList, char *secList, int branching);
    //AFFClass.cpp
    void FRAMES_API affOpen(char *fuiname, char *modId);
    void FRAMES_API affClose();
     int FRAMES_API affGetNumRunInfo();
     int FRAMES_API affGetRunInfo(int Idx, char *info);
     int FRAMES_API affGetNumSets();
     int FRAMES_API affGetSetInfo(int dsIdx, char *name, char *type);
//     int FRAMES_API affGetLocation(int dsIdx, double *x, double *y, double *z);
     int FRAMES_API affGetDimensions(int dsIdx, double *area, double *eht, double *aht, double *vel, double *etmp, double *atmp);
     int FRAMES_API affGetNumFluxTypes(int dsIdx);
     int FRAMES_API affGetFluxType(int dsIdx, int fluxIdx, char *type, double *size, char *sunt, double *density, char *dunt);
     int FRAMES_API affGetNumContam(int dsIdx);
     int FRAMES_API affGetNumProgeny(int dsIdx, int conIdx);
     int FRAMES_API affGetSeriesValues(int dsIdx, int conIdx, int progIdx, int fluxIdx, int count, double *times, double *values);
     int FRAMES_API affGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API affGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
    void FRAMES_API affAggregate(char *filename, char *casList);
    void FRAMES_API affInsert(char *filename, char *casList, char *nameList, char *degList, char *secList, int branching);
    //WFFClass.cpp
    void FRAMES_API wffOpen(char *fuiname, char *modId);
    void FRAMES_API wffClose();
     int FRAMES_API wffGetNumRunInfo();
     int FRAMES_API wffGetRunInfo(int Idx, char *info);
     int FRAMES_API wffGetNumSets();
     int FRAMES_API wffGetSetInfo(int dsIdx, char *name, char *type);
//     int FRAMES_API wffGetLocation(int dsIdx, double *x, double *y, double *z);
     int FRAMES_API wffGetDimensions(int dsIdx, double *width, double *length, double *dist, double *recharge);
     int FRAMES_API wffGetNumFluxTypes(int dsIdx);
     int FRAMES_API wffGetWaterFluxSeries(int dsIdx, int count, double *times, double *values);
     int FRAMES_API wffGetNumContam(int dsIdx);
     int FRAMES_API wffGetNumProgeny(int dsIdx, int conIdx);
     int FRAMES_API wffGetSeriesValues(int dsIdx, int conIdx, int progIdx, int fluxIdx, int count, double *times, double *values);
     int FRAMES_API wffGetSeriesValuesSum(int dsIdx, int conIdx, int progIdx, int count, double *times, double *values);
     int FRAMES_API wffGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API wffGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
    void FRAMES_API wffAggregate(char *filename, char *casList);
    void FRAMES_API wffInsert(char *filename, char *casList, char *nameList, char *degList, char *secList, int branching);
    //WCFClass.cpp
    void FRAMES_API wcfOpen(char *fuiname, char *modId);
    void FRAMES_API wcfClose();
     int FRAMES_API wcfGetNumRunInfo();
     int FRAMES_API wcfGetRunInfo(int Idx, char *info);
     int FRAMES_API wcfGetNumSets();
     int FRAMES_API wcfGetSetInfo(int dsIdx, char *name, char *type);
     int FRAMES_API wcfGetLocation(int dsIdx, double *x, double *y, double *z);
     int FRAMES_API wcfGetNumContam(int dsIdx);
     int FRAMES_API wcfGetNumProgeny(int dsIdx, int conIdx);
     int FRAMES_API wcfGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API wcfGetSeriesValues(int dsIdx, int conIdx, int progIdx, int count, double *times, double *values);
     int FRAMES_API wcfGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
    void FRAMES_API wcfAggregate(char *filename, char *casList);
    void FRAMES_API wcfInsert(char *filename, char *casList, char *nameList, char *degList, char *secList, int branching);
    //ATOClass.cpp
    void FRAMES_API atoOpen(char *fuiname, char *modId);
    void FRAMES_API atoClose() ;
     int FRAMES_API atoGetDatasetCount();
     int FRAMES_API atoGetConstituentCount(int dsIdx);
    void FRAMES_API atoGetDatasetName(int dsIdx, char *name);
    void FRAMES_API atoGetDatasetModname(int dsIdx, char *name);
    void FRAMES_API atoGetCoordinateType(int dsIdx, char *name);
    void FRAMES_API atoGetReleaseType(int dsIdx, char *name);
    void FRAMES_API atoGetSpatialType(int dsIdx, char *name);