Common Files/Frames.bas


'//--------------------------------------------------------------------------------------
'//----------- MISC. calls ----------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Sub AddSeries Lib "Frames" (ByVal Num1 As Integer, ByRef Times1 As Double, ByRef Values1 As Double, ByVal Num2 As Long, ByRef Times2 As Double, ByRef Values2 As Double, ByRef NumRes As Long, ByRef TimesRes As Double, ByRef ValuesRes As Double)
Public Declare Function GetProbability Lib "Frames" (ByVal x As Long, ByVal y As Long, ByVal count As Long, ByRef intimes As Double, ByRef invalues As Double, ByRef minval As Double, ByRef maxval As Double, ByRef begIdx As Long, ByRef endIdx As Long, ByRef sprob As Double, ByRef svalue As Double) As Long
Public Declare Sub HasSections Lib "Frames" (ByVal valu As Long)
Public Declare Sub StatSort Lib "Frames" (ByVal n As Long, Idx As Long, val As Double, mean As Double, min As Double, max As Double, median As Double, sd As Double)
'//--------------------------------------------------------------------------------------
'//----------- SUMMMM calls ---------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Function Initialize Lib "Frames" (ByVal lp1 As String, ByVal lp2 As String, ByVal lp3 As String, ByVal lp4 As String, ByVal lp5 As String) As Long
Public Declare Function Iterate Lib "Frames" (ByVal Iteration As Integer) As Long
Public Declare Function Finalize Lib "Frames" () As Long
'//--------------------------------------------------------------------------------------
'//----------- SCF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Sub scfOpen Lib "Frames" (ByVal fname As String, ByVal Source As String)
Public Declare Sub scfClose Lib "Frames" ()
Public Declare Function scfGetNumRunInfo Lib "Frames" () As Long
Public Declare Function scfGetNumSets Lib "Frames" () As Long
Public Declare Function scfGetNumContam Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function scfGetNumProgeny Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long) As Long
Public Declare Function scfGetDimensions Lib "Frames" (ByVal dsIdx As Long, ByRef width As Double, ByRef length As Double, ByRef depth As Double) As Long
Public Declare Function scfGetSeriesValues Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdxx As Long, ByVal count As Long, ByRef times As Double, ByRef values As Double) As Long
Public Declare Function DLLscfGetRunInfo Lib "Frames" Alias "scfGetRunInfo" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function DLLscfGetSetInfo Lib "Frames" Alias "scfGetSetInfo" (ByVal dsIdx As Long, ByVal dsname As String, ByVal dstype As String) As Long
Public Declare Function DLLscfGetContamName Lib "Frames" Alias "scfGetContamName" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLscfGetSeriesProperties Lib "Frames" Alias "scfGetSeriesProperties" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal units As String, ByVal timeunits As String) As Long
Public Declare Sub scfAggregate Lib "Frames" (ByVal filename As String, ByVal casList As String)
Public Declare Sub scfInsert Lib "Frames" (ByVal filename As String, ByVal casList As String, ByVal nameList As String, ByVal degList As String, ByVal secList As String, ByVal branching As Long)
'//--------------------------------------------------------------------------------------
'//----------- AFF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Sub affOpen Lib "Frames" (ByVal fname As String, ByVal Source As String)
Public Declare Sub affClose Lib "Frames" ()
Public Declare Function affGetNumRunInfo Lib "Frames" () As Long
Public Declare Function affGetNumSets Lib "Frames" () As Long
Public Declare Function affGetNumFluxTypes Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function affGetNumContam Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function affGetNumProgeny Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long) As Long
Public Declare Function affGetDimensions Lib "Frames" (ByVal dsIdx As Long, ByRef area As Double, ByRef eht As Double, ByRef aht As Double, ByRef vel As Double, ByRef etmp As Double, ByRef atmp As Double) As Long
Public Declare Function affGetSeriesValues Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal fluxIdx As Long, ByVal count As Long, ByRef times As Double, ByRef values As Double) As Long
Public Declare Function DLLaffGetRunInfo Lib "Frames" Alias "affGetRunInfo" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function DLLaffGetSetInfo Lib "Frames" Alias "affGetSetInfo" (ByVal dsIdx As Long, ByVal dsname As String, ByVal dstype As String) As Long
Public Declare Function DLLaffGetFluxType Lib "Frames" Alias "affGetFluxType" (ByVal dsIdx As Long, ByVal fluxIdx As Long, ByVal ftype As String, ByRef fsize As Double, ByVal suom As String, ByRef density As Double, ByVal duom As String) As Long
Public Declare Function DLLaffGetContamName Lib "Frames" Alias "affGetContamName" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLaffGetSeriesProperties Lib "Frames" Alias "affGetSeriesProperties" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal units As String, ByVal timeunits As String) As Long
Public Declare Sub affAggregate Lib "Frames" (ByVal filename As String, ByVal casList As String)
Public Declare Sub affInsert Lib "Frames" (ByVal filename As String, ByVal casList As String, ByVal nameList As String, ByVal degList As String, ByVal secList As String, ByVal branching As Long)
'//--------------------------------------------------------------------------------------
'//----------- WFF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Sub wffOpen Lib "Frames" (ByVal fname As String, ByVal Source As String)
Public Declare Sub wffClose Lib "Frames" ()
Public Declare Function wffGetNumRunInfo Lib "Frames" () As Long
Public Declare Function wffGetNumSets Lib "Frames" () As Long
Public Declare Function wffGetNumContam Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function wffGetNumFluxTypes Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function wffGetNumProgeny Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long) As Long
Public Declare Function wffGetDimensions Lib "Frames" (ByVal dsIdx As Long, ByRef width As Double, ByRef length As Double, ByRef dist As Double, ByRef recharge As Double) As Long
Public Declare Function wffGetWaterFluxSeries Lib "Frames" (ByVal dsIdx As Long, ByVal count As Long, ByRef times As Long, ByRef values As Double) As Double
Public Declare Function wffGetSeriesValues Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal fluxIdx As Long, ByVal count As Long, ByRef times As Double, ByRef values As Double) As Long
Public Declare Function wffGetSeriesValuesSum Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal count As Long, ByRef times As Double, ByRef values As Double) As Long
Public Declare Function DLLwffGetRunInfo Lib "Frames" Alias "wffGetRunInfo" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function DLLwffGetSetInfo Lib "Frames" Alias "wffGetSetInfo" (ByVal dsIdx As Long, ByVal dsname As String, ByVal dstype As String) As Long
Public Declare Function DLLwffGetContamName Lib "Frames" Alias "wffGetContamName" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLwffGetSeriesProperties Lib "Frames" Alias "wffGetSeriesProperties" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal units As String, ByVal timeunits As String) As Long
Public Declare Sub wffAggregate Lib "Frames" (ByVal filename As String, ByVal casList As String)
Public Declare Sub wffInsert Lib "Frames" (ByVal filename As String, ByVal casList As String, ByVal nameList As String, ByVal degList As String, ByVal secList As String, ByVal branching As Long)
'//--------------------------------------------------------------------------------------
'//----------- WCF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Sub wcfOpen Lib "Frames" (ByVal fname As String, ByVal Source As String)
Public Declare Sub wcfClose Lib "Frames" ()
Public Declare Function wcfGetNumRunInfo Lib "Frames" () As Long
Public Declare Function wcfGetNumSets Lib "Frames" () As Long
Public Declare Function wcfGetNumContam Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function wcfGetNumProgeny Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long) As Long
Public Declare Function wcfGetLocation Lib "Frames" (ByVal dsIdx As Long, ByRef x As Double, ByRef y As Double, ByRef z As Double) As Long
Public Declare Function wcfGetSeriesValues Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdxx As Long, ByVal count As Long, ByRef times As Double, ByRef values As Double) As Long
Public Declare Function DLLwcfGetRunInfo Lib "Frames" Alias "wcfGetRunInfo" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function DLLwcfGetSetInfo Lib "Frames" Alias "wcfGetSetInfo" (ByVal dsIdx As Long, ByVal dsname As String, ByVal dstype As String) As Long
Public Declare Function DLLwcfGetContamName Lib "Frames" Alias "wcfGetContamName" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLwcfGetSeriesProperties Lib "Frames" Alias "wcfGetSeriesProperties" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal units As String, ByVal timeunits As String) As Long
Public Declare Sub wcfAggregate Lib "Frames" (ByVal filename As String, ByVal casList As String)
Public Declare Sub wcfInsert Lib "Frames" (ByVal filename As String, ByVal casList As String, ByVal nameList As String, ByVal degList As String, ByVal secList As String, ByVal branching As Long)
'//--------------------------------------------------------------------------------------
'//----------- ATO calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Sub atoOpen Lib "Frames" (ByVal FUIName As String, ByVal Source As String)
Public Declare Sub atoClose Lib "Frames" ()
Public Declare Function atoGetDatasetCount Lib "Frames" () As Long
Public Declare Function atoGetConstituentCount Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function atoGetFluxCount Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Sub DLLatoGetDatasetName Lib "Frames" Alias "atoGetDatasetName" (ByVal dsIdx As Long, ByVal name As String)
Public Declare Sub DLLatoGetDatasetModname Lib "Frames" Alias "atoGetDatasetModname" (ByVal dsIdx As Long, ByVal name As String)
Public Declare Sub DLLatoGetCoordinateType Lib "Frames" Alias "atoGetCoordinateType" (ByVal dsIdx As Long, ByVal name As String)
Public Declare Sub DLLatoGetReleaseType Lib "Frames" Alias "atoGetReleaseType" (ByVal dsIdx As Long, ByVal name As String)
Public Declare Sub DLLatoGetSpatialType Lib "Frames" Alias "atoGetSpatialType" (ByVal dsIdx As Long, ByVal name As String)
'//----------- ATO flux calls -------------------------------
